--- a/style.css
+++ b/style.css
@@ -1,65 +1,37 @@
-h1 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 95px;
-  text-align: left;
-  padding-left: 7%;
-  color: white;
-  text-shadow: 2px 2px 4px #0000006b;
-}
-
-h2 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 40px;
-  text-align: left;
-  color: white;
-  padding-left: 135px;
-  text-shadow: 2px 2px 4px #0000006b;
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  background: url("background.png") no-repeat center center fixed;
-  background-size: cover;
+  font-family: 'Montserrat', sans-serif;
+  background: white;
+  color: black;
+  margin: 20px;
 }
 
+h1 {
+  margin-bottom: 20px;
+}
 
+.section {
+  margin-bottom: 30px;
+}
 
-.button {
-  position:absolute;
-  left: 7%;
-  font-family: "Montserrat", sans-serif;
-  background-color: #615a5a;
+button {
+  background: black;
+  color: white;
   border: none;
-  color: #ffffff;
-  text-align: center;
-  font-size: 28px;
-  padding: 10px 60px;
-  transition: all 0.5s;
+  padding: 10px 20px;
   cursor: pointer;
-  margin: 5px;
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 10px;
 }
 
-.button span {
-  cursor: pointer;
-  position: relative;
-  transition: 0.5s;
+button:hover {
+  opacity: 0.8;
 }
 
-.button span:after {
-  content: '\00bb';
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-.button:hover span {
-  padding-right: 25px;
-}
-
-.button:hover span:after {
-  opacity: 1;
-  right: 0;
+textarea, input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 10px;
+  border: 1px solid black;
+  resize: none;
 }
